--- a/src/main/webapp/recursos/plantilla/plantilla.xhtml
+++ b/src/main/webapp/recursos/plantilla/plantilla.xhtml
@@ -4,10 +4,8 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html"> 
 
-	<h:head>
-	</h:head> 
-	
-	<body>
-		Proyecto Madiba 
-	</body> 
+<h:head></h:head> 
+<body> 
+
+</body> 
 </html>
