mejoramiento de rutas e resource y se añadio opcion de reparto... falta arreglar rutas de las vistas y boton de reparto

--- a/src/main/webapp/resources/secciones/header.xhtml
+++ b/src/main/webapp/resources/secciones/header.xhtml
@@ -7,17 +7,19 @@
 <h:head></h:head>
 <body>
 	<ui:composition>
-		<a href="#" class="logo"> <!-- mini logo for sidebar mini 50x50 pixels -->
+		<a href="/Madiba" class="logo"> <!-- mini logo for sidebar mini 50x50 pixels -->
 			<span class="logo-mini"><b>A</b>LT</span> <!-- logo for regular state and mobile devices -->
-			<span class="logo-lg"><b>Admin</b>LTE</span>
+			<span class="logo-lg"><b>Conalbos</b></span>
 		</a>
 
 		<div class="navbar navbar-static-top">
 			<div class="navbar-custom-menu">
 				<ul class="nav navbar-nav">
 					<li class="dropdown user user-menu"><a href="#"
-						class="dropdown-toggle"> <img src="recursos/img/png/boy-1.png"
-							class="user-image" alt="User Image" /> <span class="hidden-xs">Olga Lucero</span>
+						class="dropdown-toggle"> 
+						<h:graphicImage library="img/png" name="boy-1.png" class="user-image" alt="User Image" />
+						
+							<span class="hidden-xs">Jenny Marcela</span>
 					</a></li>
 				</ul>
 			</div>
