--- a/src/main/webapp/resources/plantilla/plantilla.xhtml
+++ b/src/main/webapp/resources/plantilla/plantilla.xhtml
@@ -5,9 +5,10 @@
 	xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head>
-	<link rel="stylesheet" href="recursos/css/bootstrap.css"/>
-	<link rel="stylesheet" href="recursos/css/AdminLTE.css"/>
-	<link rel="stylesheet" href="recursos/css/_all-skins.css"/>
+	<h:outputStylesheet library="css" name="bootstrap.css"></h:outputStylesheet>
+	<h:outputStylesheet library="css" name="AdminLTE.css"></h:outputStylesheet>
+	<h:outputStylesheet library="css" name="_all-skins.css"></h:outputStylesheet>
+	
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css"/>
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css"/>
 </h:head>
@@ -16,22 +17,23 @@
 
 	<div class='main-header'>
 		<ui:insert name="header">
-			<ui:include src="/recursos/secciones/header.xhtml" />
+			<ui:include src="/resources/secciones/header.xhtml" />
 		</ui:insert>
 	</div>
 	<div class='main-sidebar'>
 		<ui:insert name="sidebar">
-			<ui:include src="/recursos/secciones/sidebar.xhtml" />
+			<ui:include src="/resources/secciones/sidebar.xhtml" />
 		</ui:insert>
 	</div>
 	<div class='content-wrapper' style='height: 537px;padding-top: 20px;overflow: scroll;'>
+		
 		<ui:insert name="content">
-			<ui:include src="/recursos/secciones/content.xhtml" />
+			<ui:include src="/resources/secciones/content.xhtml" />
 		</ui:insert>
 	</div>
 	<div class='main-footer'>
 		<ui:insert name="footer">
-			<ui:include src="/recursos/secciones/footer.xhtml" />
+			<ui:include src="/resources/secciones/footer.xhtml" />
 		</ui:insert>
 	</div>
 	<h:outputScript library="js" name="/bootstrap.js" />
