--- a/src/main/webapp/resources/plantilla/plantilla.xhtml
+++ b/src/main/webapp/resources/plantilla/plantilla.xhtml
@@ -36,7 +36,8 @@
 			<ui:include src="/resources/secciones/footer.xhtml" />
 		</ui:insert>
 	</div>
-	<h:outputScript library="js" name="/bootstrap.js" />
+	<h:outputScript library="js" name="jquery-2.2.3.min.js" />
+	<h:outputScript library="js" name="bootstrap.js" />
 	<h:outputScript library="js" name="app.js" />
 	
 </h:body>
