--- a/src/main/webapp/resources/secciones/sidebar.xhtml
+++ b/src/main/webapp/resources/secciones/sidebar.xhtml
@@ -10,7 +10,8 @@
 		<div class="sidebar">
 			<div class="user-panel">
 				<div class="pull-left image">
-					<h:graphicImage library="img/png" name="boy-1.png" class="img-circle" alt="User Image" />
+					<h:graphicImage library="img/png" name="boy-1.png"
+						class="img-circle" alt="User Image" />
 				</div>
 				<div class="pull-left info">
 					<p>Alexander Pierce</p>
@@ -22,15 +23,19 @@
 			<ul class="sidebar-menu">
 				<li class="header">MENU</li>
 				<!-- Optionally, you can add icons to the links -->
-				<li class="active"><a href="index.jsf"><i class="fa fa-home"></i> <span>Inicio</span></a></li>
-				<li class="active"><a href="modulos/conciliadores/listaconciliadores.jsf"><i class="fa fa-users"></i> <span>Conciliadores</span></a></li>
-				<li class="active"><a href="modulos/solicitudes/listasolicitudes.jsf"><i class="fa fa-link"></i> <span>Solicitudes</span></a>
-					<ul class="sidebar-menu">
-					<li class="active"><a href="modulos/solicitudes/designarconciliador.jsf"><i class="fa fa-link"></i> <span>Designar Conciliador</span></a>
-					</li>
-					</ul>
-				</li>
-				
+				<li class="active"><a href="index.jsf"><i
+						class="fa fa-home"></i> <span>Inicio</span></a></li>
+				<li class=""><a
+					href="modulos/conciliadores/listaconciliadores.jsf"><i
+						class="fa fa-users"></i> <span>Conciliadores</span></a></li>
+				<li class="treeview"><a href="modulos/solicitudes/listasolicitudes.jsf"><i
+						class="fa fa-link"></i> <span>Solicitudes</span></a>
+					<ul class="treeview-menu">
+						<li class=""><a
+							href="modulos/solicitudes/designarconciliador.jsf"><i
+								class="fa fa-link"></i> <span>Designar Conciliador</span></a></li>
+					</ul></li>
+
 			</ul>
 		</div>
 	</ui:composition>
