--- a/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
+++ b/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
@@ -12,7 +12,7 @@
 			<div class="">
 				<c:forEach items="${controllerConciliador.listaConciliador()}"
 					var="conciliador">
-					<div class="col-md-4 col-sm-4 col-xs-12">
+					<div class="col-md-3 col-md-4 col-sm-4 col-xs-12">
 						<div class="box box-primary">
 							<div class="box-header with-border">
 								<i> 
