--- a/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
+++ b/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
@@ -2,24 +2,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:c="http://java.sun.com/jsp/jstl/core">
+	xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head></h:head>
 <body>
 	<ui:composition template="/resources/plantilla/plantilla.xhtml">
 		<ui:define name="content">
 			<div class="">
-				<c:forEach items="${controllerConciliador.listaConciliador()}"
-					var="conciliador">
-					<div class="col-md-3 col-md-4 col-sm-4 col-xs-12">
+				<ui:repeat var="conciliador"
+					value="#{controllerConciliador.listaConciliador()}">
+					<div class="col-md-4 col-sm-6 col-xs-12">
 						<div class="box box-primary">
 							<div class="box-header with-border">
-								<i> 
-									<h:outputLabel value="#{conciliador.getApellido()} " /> 
-									<h:outputLabel value="#{conciliador.getNombre()} " /> 
-								</i>
-								<small class="label pull-right label-primary">#{conciliador.getId()}</small>
+								<i> <h:outputLabel value="#{conciliador.getApellido()} " />
+									<h:outputLabel value="#{conciliador.getNombre()} " />
+								</i> <small class="label pull-right label-primary">#{conciliador.getId()}</small>
 							</div>
 							<div class='box-body'>
 								<div class="left col-xs-7">
@@ -32,7 +29,7 @@
 										#{conciliador.getExperiencia()}
 									</p>
 									<p>
-										<i class="fa fa-phone"></i> 
+										<i class="fa fa-phone"></i>
 										<h:outputLabel value=" Telefono:" />
 										#{conciliador.getTelefono()}
 									</p>
@@ -52,7 +49,7 @@
 							</div>
 						</div>
 					</div>
-				</c:forEach>
+				</ui:repeat>
 			</div>
 		</ui:define>
 	</ui:composition>
