--- a/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
+++ b/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
@@ -2,57 +2,50 @@
 <html xmlns="http://www.w3.org/1999/xhtml"
 	xmlns:ui="http://java.sun.com/jsf/facelets"
 	xmlns:f="http://java.sun.com/jsf/core"
-	xmlns:h="http://java.sun.com/jsf/html"
-	xmlns:c="http://java.sun.com/jsp/jstl/core">
+	xmlns:h="http://java.sun.com/jsf/html">
 
 <h:head></h:head>
 <body>
 	<ui:composition template="/resources/plantilla/plantilla.xhtml">
 		<ui:define name="content">
 			<div class="">
-				<c:forEach items="${controllerConciliador.listaConciliador()}"
-					var="conciliador">
-					<div class="col-md-4 col-sm-4 col-xs-12">
-						<div class="box box-primary">
+				<ui:repeat var="conciliador" value="#{controllerConciliador.listaConciliador()}">
+					<div class="col-md-6 col-sm-6 col-xs-12">
+						<div class="box box-primary" style="height: 150px">
 							<div class="box-header with-border">
-								<i> 
-									<h:outputLabel value="#{conciliador.getApellido()} " /> 
-									<h:outputLabel value="#{conciliador.getNombre()} " /> 
-								</i>
-								<small class="label pull-right label-primary">#{conciliador.getId()}</small>
+								<i> <h:outputLabel value="Solicitud No." style="font-size:14pt"/>123456
+								</i> <h:commandButton class="pull-right btn btn-primary btn-sm" value="Radicar" />
 							</div>
 							<div class='box-body'>
-								<div class="left col-xs-7">
-									<p>
-										<h:outputLabel value="Especialidad:" />
-										#{conciliador.getEspecialidad()}
-									</p>
-									<p>
-										<h:outputLabel value="Experiencia:" />
-										#{conciliador.getExperiencia()}
-									</p>
-									<p>
-										<i class="fa fa-phone"></i> 
-										<h:outputLabel value=" Telefono:" />
-										#{conciliador.getTelefono()}
-									</p>
+								<div class="left col-xs-2 text-center" >
+									<h:graphicImage library="img" name="msj-solicitudes.png" style="width:80px;"/>
 								</div>
-								<div class="right col-xs-5 text-center">
-									<img
-										src="http://localhost:8080/Madiba/resources/img/png/#{conciliador.getFoto()}"
-										alt="" class="img-circle img-responsive" />
+								<div class="right col-xs-5" style="">
+									<h:outputLabel value="Fecha:" />
+									#{conciliador.getEspecialidad()}
+									<br/>
+									<h:outputLabel value="Convocante:" />
+									#{conciliador.getExperiencia()}
+									<br/>
+									<i class="fa fa-phone"></i>
+									<h:outputLabel value="Convocado:" />
+									#{conciliador.getTelefono()}
 								</div>
-								<div class="col-lg-12">
-									<p>
-										<i class="fa fa-envelope"></i>
-										<h:outputLabel value=" Email:" />
-										#{conciliador.getEmail()}
-									</p>
+								<div class="right col-xs-5" style="">
+									<h:outputLabel value="Fecha:" />
+									#{conciliador.getEspecialidad()}
+									<br/>
+									<h:outputLabel value="Convocante:" />
+									#{conciliador.getExperiencia()}
+									<br/>
+									<i class="fa fa-phone"></i>
+									<h:outputLabel value="Convocado:" />
+									#{conciliador.getTelefono()}
 								</div>
 							</div>
 						</div>
 					</div>
-				</c:forEach>
+				</ui:repeat>
 			</div>
 		</ui:define>
 	</ui:composition>
