--- a/src/main/webapp/resources/secciones/sidebar.xhtml
+++ b/src/main/webapp/resources/secciones/sidebar.xhtml
@@ -23,17 +23,20 @@
 			<ul class="sidebar-menu">
 				<li class="header">MENU</li>
 				<!-- Optionally, you can add icons to the links -->
-				<li class="active"><a href="index.jsf"><i
+				<li class="active"><a href="/Madiba/index.jsf"><i
 						class="fa fa-home"></i> <span>Inicio</span></a></li>
 				<li class=""><a
-					href="modulos/conciliadores/listaconciliadores.jsf"><i
+					href="/Madiba/modulos/conciliadores/listaconciliadores.jsf"><i
 						class="fa fa-users"></i> <span>Conciliadores</span></a></li>
-				<li class="treeview"><a href="modulos/solicitudes/listasolicitudes.jsf"><i
+				<li class="treeview"><a
+					href="/Madiba/modulos/solicitudes/listasolicitudes.jsf"><i
 						class="fa fa-link"></i> <span>Solicitudes</span></a>
 					<ul class="treeview-menu">
 						<li class=""><a
-							href="modulos/solicitudes/designarconciliador.jsf"><i
-								class="fa fa-link"></i> <span>Designar Conciliador</span></a></li>
+							href="/Madiba/modulos/solicitudes/listasolicitudes.jsf"><i
+								class="fa fa-link"></i> <span>Lista Solicitudes</span></a></li><li class=""><a
+							href="/Madiba/modulos/solicitudes/designarconciliador.jsf"><i
+								class="fa fa-link"></i> <span>Radicar Solicitud</span></a></li>
 					</ul></li>
 
 			</ul>
