--- a/src/main/webapp/resources/plantilla/plantilla.xhtml
+++ b/src/main/webapp/resources/plantilla/plantilla.xhtml
@@ -31,11 +31,11 @@
 			<ui:include src="/resources/secciones/content.xhtml" />
 		</ui:insert>
 	</div>
-	<div class='main-footer'>
+	<!-- <div class='main-footer'>
 		<ui:insert name="footer">
 			<ui:include src="/resources/secciones/footer.xhtml" />
 		</ui:insert>
-	</div>
+	</div> -->
 	<h:outputScript library="js" name="jquery-2.2.3.min.js" />
 	<h:outputScript library="js" name="bootstrap.js" />
 	<h:outputScript library="js" name="app.js" />
