--- a/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
+++ b/src/main/webapp/modulos/conciliadores/listaconciliadores.xhtml
@@ -14,39 +14,37 @@
 					<div class="col-md-4 col-sm-6 col-xs-12">
 						<div class="box box-primary">
 							<div class="box-header with-border">
-								<i> <h:outputLabel value="#{conciliador.getApellido()} " />
+								<i> <h:outputLabel value="#{conciliador.getApellido()}" />
+									<label> </label>
 									<h:outputLabel value="#{conciliador.getNombre()} " />
 								</i> <small class="label pull-right label-primary">#{conciliador.getId()}</small>
 							</div>
 							<div class='box-body'>
-								<div class="left col-xs-7">
-									<p>
+								<div class="left col-xs-8">
 										<h:outputLabel value="Especialidad:" />
 										#{conciliador.getEspecialidad()}
-									</p>
-									<p>
+										<br />
 										<h:outputLabel value="Experiencia:" />
 										#{conciliador.getExperiencia()}
-									</p>
-									<p>
-										<i class="fa fa-phone"></i>
-										<h:outputLabel value=" Telefono:" />
-										#{conciliador.getTelefono()}
-									</p>
+										<br />
+										<h:outputLabel value=" Universidad de los Llanos" />
 								</div>
-								<div class="right col-xs-5 text-center">
+								<div class="right col-xs-4 text-center">
 									<img
 										src="http://localhost:8080/Madiba/resources/img/png/#{conciliador.getFoto()}"
 										alt="" class="img-circle img-responsive" />
 								</div>
-								<div class="col-lg-12">
-									<p>
-										<i class="fa fa-envelope"></i>
-										<h:outputLabel value=" Email:" />
-										#{conciliador.getEmail()}
-									</p>
+								<div class="left col-xs-12">
+									<i class="fa fa-phone"></i>
+									<h:outputLabel value=" Telefono:" />
+									#{conciliador.getTelefono()}
+									<br />
+									<i class="fa fa-envelope"></i>
+									<h:outputLabel value=" Email:" />
+									#{conciliador.getEmail()}
 								</div>
 							</div>
+							
 						</div>
 					</div>
 				</ui:repeat>
