modelo Solicitud ManagedBean

--- a/src/main/webapp/modulos/solicitudes/designarconciliador.xhtml
+++ b/src/main/webapp/modulos/solicitudes/designarconciliador.xhtml
@@ -14,7 +14,7 @@
 					<h:commandButton value="Reparto" action="#{controllerConciliador.reparto()}"  />
 					<h:commandButton value="Solicitado" action="#{controllerConciliador.solicitado('3212780399')}"  />	
 				</h:form>
-				
+				<ui:repeat var="" value="#{"></ui:repeat>
 			</div>
 		</ui:define>
 	</ui:composition>
