añadidos tipos de solicitudes, con errores en las vistas...

--- a/src/main/webapp/resources/secciones/header.xhtml
+++ b/src/main/webapp/resources/secciones/header.xhtml
@@ -17,7 +17,7 @@
 				<ul class="nav navbar-nav">
 					<li class="dropdown user user-menu"><a href="#"
 						class="dropdown-toggle"> 
-						<h:graphicImage library="img/png" name="boy-1.png" class="user-image" alt="User Image" />
+						<h:graphicImage library="img/png" name="girl.png" class="user-image" alt="User Image" />
 						
 							<span class="hidden-xs">Jenny Marcela</span>
 					</a></li>
