--- a/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
+++ b/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
@@ -24,11 +24,91 @@
 		              		</li>
 		            	</ul>
 		            	<div class="tab-content">
-		              		<div class="active tab-pane" id="todas">
-		              			Todas las Solicitudes
-		               		</div>
-		              		<div class="tab-pane" id="liquidar">
-		              			Solicitudes por liquidar
+		              		<div class="active tab-pane" id="todas" style="height: 1000px">
+								<ui:repeat var="solicitud" value="#{controllerSolicitud.listaSolicitud}">
+									<div class="col-md-6 col-sm-6 col-xs-12" style="">
+										<div class="box box-primary" style="height: 150px;box-shadow: 2px 2px 5px #999;">
+											<h:form>
+												<div class="box-header with-border">
+													<h:graphicImage library="img" name="msj-solicitudes.png" style="width:33px;"/>
+													<i> 
+														<h:outputLabel value="Solicitud No." style="font-size:14pt; margin-left:1%"/>
+													</i>
+													<h:commandButton class="pull-right btn btn-primary btn-sm" value="Radicar" action="#{controllerConciliador.solicitado('3212780399')}"/>
+												</div>
+											</h:form>
+											<div class='box-body'>
+												<div class="col-xs-6">
+													<h:outputLabel value="Fecha:" />
+													#{solicitud.fecha}
+													<br/>
+													<h:outputLabel value="Convocante:" />
+													<ui:repeat var="convotante" value="#{solicitud.convotante}">
+														 #{convotante}
+														 <label> </label>
+													</ui:repeat>
+												</div>
+												<div class="col-xs-6">
+													<h:outputLabel value="Conciliador:" />
+													#{solicitud.conciliador}
+													<br/>
+													<h:outputLabel value="Convocado:" />
+													<ui:repeat var="convocado" value="#{solicitud.convocado}">
+														 #{convocado}
+														 <label> </label>
+													</ui:repeat>
+												</div>
+												<div class="col-xs-12">
+													<h:outputLabel value="Descripción:" />
+													#{solicitud.descripcion}
+												</div>
+											</div>
+										</div>
+									</div>
+								</ui:repeat>
+		              		</div>
+		              		<div class="tab-pane" id="liquidar" style="height: 1000px">
+								<ui:repeat var="solicitud" value="#{controllerSolicitud.listaSolicitud}">
+									<div class="col-md-6 col-sm-6 col-xs-12" style="">
+										<div class="box box-primary" style="height: 150px;box-shadow: 2px 2px 5px #999;">
+											<h:form>
+												<div class="box-header with-border">
+													<h:graphicImage library="img" name="msj-solicitudes.png" style="width:33px;"/>
+													<i> 
+														<h:outputLabel value="Solicitud No." style="font-size:14pt; margin-left:1%"/>
+													</i>
+													<h:commandButton class="pull-right btn btn-primary btn-sm" value="Radicar" action="#{controllerConciliador.solicitado('3212780399')}"/>
+												</div>
+											</h:form>
+											<div class='box-body'>
+												<div class="col-xs-6">
+													<h:outputLabel value="Fecha:" />
+													#{solicitud.fecha}
+													<br/>
+													<h:outputLabel value="Convocante:" />
+													<ui:repeat var="convotante" value="#{solicitud.convotante}">
+														 #{convotante}
+														 <label> </label>
+													</ui:repeat>
+												</div>
+												<div class="col-xs-6">
+													<h:outputLabel value="Conciliador:" />
+													#{solicitud.conciliador}
+													<br/>
+													<h:outputLabel value="Convocado:" />
+													<ui:repeat var="convocado" value="#{solicitud.convocado}">
+														 #{convocado}
+														 <label> </label>
+													</ui:repeat>
+												</div>
+												<div class="col-xs-12">
+													<h:outputLabel value="Descripción:" />
+													#{solicitud.descripcion}
+												</div>
+											</div>
+										</div>
+									</div>
+								</ui:repeat>
 		              		</div>
 		                	<div class="tab-pane" id="radicar" style="height: 1000px">
 		                		<!-- <ui:repeat var="conciliador" value="#{controllerConciliador.listaConciliador()}"> -->
@@ -99,6 +179,47 @@
 										</div>
 									</div>
 								<!-- </ui:repeat> -->
+								<ui:repeat var="solicitud" value="#{controllerSolicitud.listaSolicitud}">
+									<div class="col-md-6 col-sm-6 col-xs-12" style="">
+										<div class="box box-primary" style="height: 150px;box-shadow: 2px 2px 5px #999;">
+											<h:form>
+												<div class="box-header with-border">
+													<h:graphicImage library="img" name="msj-solicitudes.png" style="width:33px;"/>
+													<i> 
+														<h:outputLabel value="Solicitud No." style="font-size:14pt; margin-left:1%"/>
+													</i>
+													<h:commandButton class="pull-right btn btn-primary btn-sm" value="Radicar" action="#{controllerConciliador.solicitado('3212780399')}"/>
+												</div>
+											</h:form>
+											<div class='box-body'>
+												<div class="col-xs-6">
+													<h:outputLabel value="Fecha:" />
+													#{solicitud.fecha}
+													<br/>
+													<h:outputLabel value="Convocante:" />
+													<ui:repeat var="convotante" value="#{solicitud.convotante}">
+														 #{convotante}
+														 <label> </label>
+													</ui:repeat>
+												</div>
+												<div class="col-xs-6">
+													<h:outputLabel value="Conciliador:" />
+													#{solicitud.conciliador}
+													<br/>
+													<h:outputLabel value="Convocado:" />
+													<ui:repeat var="convocado" value="#{solicitud.convocado}">
+														 #{convocado}
+														 <label> </label>
+													</ui:repeat>
+												</div>
+												<div class="col-xs-12">
+													<h:outputLabel value="Descripción:" />
+													#{solicitud.descripcion}
+												</div>
+											</div>
+										</div>
+									</div>
+								</ui:repeat>
 		              		</div>
 		            	</div>
 		          	</div>
