--- a/src/main/webapp/resources/secciones/sidebar.xhtml
+++ b/src/main/webapp/resources/secciones/sidebar.xhtml
@@ -10,11 +10,10 @@
 		<div class="sidebar">
 			<div class="user-panel">
 				<div class="pull-left image">
-					<h:graphicImage library="img/png" name="boy-1.png"
-						class="img-circle" alt="User Image" />
+					<h:graphicImage library="img/png" name="girl.png" class="img-circle" alt="User Image" />
 				</div>
 				<div class="pull-left info">
-					<p>Alexander Pierce</p>
+					<p>Jenny Marcela</p>
 					<!-- Status -->
 					<a href="#"><i class="fa fa-circle text-success"></i> Online</a>
 				</div>
@@ -40,7 +39,7 @@
 						<i class="fa fa-link"></i> 
 						<span>Solicitudes</span>
 						<span class="pull-right-container">
-		              		<i class="fa fa-angle-left pull-right"></i>
+		              		<i class="fa fa-angle-right pull-right"></i>
 			            </span>
 					</a>
 					<ul class="treeview-menu">
