funcionando pestañas de solicitudes y muestra filtrado por estado... falta funcionalidad correcta de cada boton

--- a/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
+++ b/src/main/webapp/modulos/solicitudes/listasolicitudes.xhtml
@@ -22,6 +22,9 @@
 		              		<li>
 		              			<a href="#radicar" data-toggle="tab">Por Radicar</a>
 		              		</li>
+		              		<li>
+		              			<a href="#audiencia" data-toggle="tab">Para Audiencia</a>
+		              		</li>
 		            	</ul>
 		            	<div class="tab-content">
 		              		<div class="active tab-pane" id="todas" style="height: 1000px">
@@ -34,7 +37,7 @@
 													<i> 
 														<h:outputLabel value="Solicitud No." style="font-size:14pt; margin-left:1%"/>
 													</i>
-													<h:commandButton class="pull-right btn btn-primary btn-sm" value="Radicar" action="#{controllerConciliador.solicitado('3212780399')}"/>
+													<h:commandButton class="pull-right btn btn-primary btn-sm" value="#{solicitud.estado}" action="#{controllerConciliador.solicitado('3212780399')}"/>
 												</div>
 											</h:form>
 											<div class='box-body'>
@@ -68,7 +71,7 @@
 								</ui:repeat>
 		              		</div>
 		              		<div class="tab-pane" id="liquidar" style="height: 1000px">
-								<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesLiquidar()}">
+								<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Liquidar')}">
 									<div class="col-md-6 col-sm-6 col-xs-12" style="">
 										<div class="box box-primary" style="height: 150px;box-shadow: 2px 2px 5px #999;">
 											<h:form>
@@ -77,7 +80,7 @@
 													<i> 
 														<h:outputLabel value="Solicitud No." style="font-size:14pt; margin-left:1%"/>
 													</i>
-													<h:commandButton class="pull-right btn btn-primary btn-sm" value="Radicar" action="#{controllerConciliador.solicitado('3212780399')}"/>
+													<h:commandButton class="pull-right btn btn-primary btn-sm" value="#{solicitud.estado}" action="#{controllerConciliador.solicitado('3212780399')}"/>
 												</div>
 											</h:form>
 											<div class='box-body'>
@@ -179,7 +182,7 @@
 										</div>
 									</div>
 								<!-- </ui:repeat> -->
-								<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesRadicar()}">
+								<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Radicar')}">
 									<div class="col-md-6 col-sm-6 col-xs-12" style="">
 										<div class="box box-primary" style="height: 150px;box-shadow: 2px 2px 5px #999;">
 											<h:form>
@@ -188,7 +191,7 @@
 													<i> 
 														<h:outputLabel value="Solicitud No." style="font-size:14pt; margin-left:1%"/>
 													</i>
-													<h:commandButton class="pull-right btn btn-primary btn-sm" value="Radicar" action="#{controllerConciliador.solicitado('3212780399')}"/>
+													<h:commandButton class="pull-right btn btn-primary btn-sm" value="#{solicitud.estado}" action="#{controllerConciliador.solicitado('3212780399')}"/>
 												</div>
 											</h:form>
 											<div class='box-body'>
@@ -221,6 +224,49 @@
 									</div>
 								</ui:repeat>
 		              		</div>
+	              			<div class="tab-pane" id="audiencia" style="height: 1000px">
+	              				<ui:repeat var="solicitud" value="#{controllerSolicitud.solicitudesPorEstado('Audiencia')}">
+									<div class="col-md-6 col-sm-6 col-xs-12" style="">
+										<div class="box box-primary" style="height: 150px;box-shadow: 2px 2px 5px #999;">
+											<h:form>
+												<div class="box-header with-border">
+													<h:graphicImage library="img" name="msj-solicitudes.png" style="width:33px;"/>
+													<i> 
+														<h:outputLabel value="Solicitud No." style="font-size:14pt; margin-left:1%"/>
+													</i>
+													<h:commandButton class="pull-right btn btn-primary btn-sm" value="#{solicitud.estado}" action="#{controllerConciliador.solicitado('3212780399')}"/>
+												</div>
+											</h:form>
+											<div class='box-body'>
+												<div class="col-xs-6">
+													<h:outputLabel value="Fecha:" />
+													#{solicitud.fecha}
+													<br/>
+													<h:outputLabel value="Convocante:" />
+													<ui:repeat var="convotante" value="#{solicitud.convotante}">
+														 #{convotante}
+														 <label> </label>
+													</ui:repeat>
+												</div>
+												<div class="col-xs-6">
+													<h:outputLabel value="Conciliador:" />
+													#{solicitud.conciliador}
+													<br/>
+													<h:outputLabel value="Convocado:" />
+													<ui:repeat var="convocado" value="#{solicitud.convocado}">
+														 #{convocado}
+														 <label> </label>
+													</ui:repeat>
+												</div>
+												<div class="col-xs-12">
+													<h:outputLabel value="Descripción:" />
+													#{solicitud.descripcion}
+												</div>
+											</div>
+										</div>
+									</div>
+								</ui:repeat>
+	              			</div>
 		            	</div>
 		          	</div>
 		       	</div>
