--- a/src/main/webapp/resources/secciones/sidebar.xhtml
+++ b/src/main/webapp/resources/secciones/sidebar.xhtml
@@ -34,7 +34,13 @@
 						<span>Conciliadores</span>
 					</a>
 				</li>
-				<li class="treeview">
+				<li class="">
+					<a href="/Madiba/modulos/solicitudes/listasolicitudes.jsf">
+						<i class="fa fa-users"></i> 
+						<span>Solicitudes</span>
+					</a>
+				</li>
+				<!-- <li class="treeview">
 					<a href="#">
 						<i class="fa fa-link"></i> 
 						<span>Solicitudes</span>
@@ -56,7 +62,7 @@
 							</a>
 						</li>
 					</ul>
-				</li>
+				</li> -->
 			</ul>
 		</div>
 	</ui:composition>
